--- a/html/options.html
+++ b/html/options.html
@@ -48,7 +48,8 @@
         <div class="clear-fix"></div>
 
     </div>
-
-            <script type="text/javascript" src="../js/options.js"></script>
+    <script type="text/javascript" src="../js/message.js"></script>
+    <script type="text/javascript" src="../js/storage.js"></script>
+    <script type="text/javascript" src="../js/options.js"></script>
 </body>
 </html>
