Renaming options.js to distinguise between type js files. Isolating extension into it's own file.

--- a/html/options.html
+++ b/html/options.html
@@ -50,6 +50,6 @@
     </div>
     <script type="text/javascript" src="../js/message.js"></script>
     <script type="text/javascript" src="../js/storage.js"></script>
-    <script type="text/javascript" src="../js/options.js"></script>
+    <script type="text/javascript" src="../js/_page_support_options.js"></script>
 </body>
 </html>
